deploy/ci/buildbarn/worker-integration-large.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/port: '80'
    prometheus.io/scrape: 'true'
  name: worker-integration-large
  namespace: migrations-buildbarn
spec:
  selector:
    matchLabels:
      app: worker
      instance: integration-large
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: worker
        instance: integration-large
        container-tests: 'true'
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - /config/worker-integration-large.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20260908T142432Z-77f7642
        name: worker
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          tcpSocket:
            port: 9980
        resources:
          limits:
            cpu: 250m
            memory: 384Mi
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - DAC_OVERRIDE
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command:
        - /bb/bb_runner
        - /config/runner-integration.jsonnet
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:dd7654ffb01d5b7b54b23b9ce928a1f7f2d08c7b3d7e320b6574b55d7ccde78b
        name: runner
        resources:
          limits:
            cpu: '2'
            ephemeral-storage: 12Gi
            memory: 3Gi
          requests:
            cpu: '2'
            ephemeral-storage: 2Gi
            memory: 3Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsUser: 65534
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      - name: docker
        image: docker:28.5.2-dind@sha256:2a232a42256f70d78e3cc5d2b5d6b3276710a0de0596c145f627ecfae90282ac
        command:
        - /bin/sh
        - /config/start-docker.sh
        args: []
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 500m
            memory: 6Gi
            ephemeral-storage: 4Gi
          limits:
            cpu: 1500m
            memory: 6Gi
            ephemeral-storage: 40Gi
        volumeMounts:
        - name: docker
          mountPath: /var/lib/docker
        - name: worker
          mountPath: /worker
        - name: configs
          mountPath: /config
          readOnly: true
        startupProbe:
          exec:
            command:
            - docker
            - info
          periodSeconds: 3
          failureThreshold: 60
        readinessProbe:
          exec:
            command:
            - docker
            - info
          periodSeconds: 10
          timeoutSeconds: 5
      nodeSelector:
        doks.digitalocean.com/node-pool: workers
        kubernetes.io/arch: amd64
      tolerations:
      - effect: NoSchedule
        key: workload
        operator: Equal
        value: bazel
      volumes:
      - emptyDir: {}
        name: empty
      - configMap:
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-ubuntu22-04.jsonnet
            path: runner-ubuntu22-04.jsonnet
          - key: worker-integration-large.jsonnet
            path: worker-integration-large.jsonnet
          - key: start-docker.sh
            path: start-docker.sh
          - key: runner-integration.jsonnet
            path: runner-integration.jsonnet
          - key: clean-docker.sh
            path: clean-docker.sh
          name: buildbarn-integration-large-config
        name: configs
      - emptyDir:
          sizeLimit: 12Gi
        name: worker
      - name: docker
        emptyDir:
          sizeLimit: 40Gi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: worker
                container-tests: 'true'
            topologyKey: kubernetes.io/hostname
