deploy/ci/buildbarn/frontend.yaml
# Adapted from buildbarn/bb-deployments d4a6ca38e5f77959b42fccaa34a3320253683bc2.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: migrations-buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - args:
        - /config/frontend.jsonnet
        image: ghcr.io/buildbarn/bb-storage:20260906T092937Z-ae61334
        name: storage
        ports:
        - containerPort: 8980
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 750m
            memory: 384Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        readinessProbe:
          tcpSocket:
            port: 8980
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: frontend.jsonnet
            path: frontend.jsonnet
      automountServiceAccountToken: false
      nodeSelector:
        doks.digitalocean.com/node-pool: control-plane
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - frontend
                  - scheduler
                  - storage
              topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '80'
    prometheus.io/scrape: 'true'
  name: frontend
  namespace: migrations-buildbarn
spec:
  ports:
  - port: 8980
    protocol: TCP
    name: grpc
  selector:
    app: frontend
  type: ClusterIP
