deploy/ci/buildbarn/scheduler.yaml
# Adapted from buildbarn/bb-deployments d4a6ca38e5f77959b42fccaa34a3320253683bc2.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-ubuntu22-04
  namespace: migrations-buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: scheduler
        instance: ubuntu22-04
    spec:
      containers:
      - args:
        - /config/scheduler.jsonnet
        image: ghcr.io/buildbarn/bb-scheduler:20260908T142432Z-77f7642
        name: scheduler
        ports:
        - containerPort: 8982
          protocol: TCP
        - containerPort: 8983
          protocol: TCP
        - containerPort: 7982
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 750m
            memory: 384Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        readinessProbe:
          tcpSocket:
            port: 8982
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: scheduler.jsonnet
            path: scheduler.jsonnet
      automountServiceAccountToken: false
      nodeSelector:
        doks.digitalocean.com/node-pool: control-plane
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - frontend
                  - scheduler
                  - storage
              topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: migrations-buildbarn
  annotations:
    prometheus.io/port: '80'
    prometheus.io/scrape: 'true'
spec:
  ports:
  - port: 8982
    protocol: TCP
    name: client-grpc
  - port: 8983
    protocol: TCP
    name: worker-grpc
  - port: 8984
    protocol: TCP
    name: build-queue-state
  - port: 7982
    protocol: TCP
    name: http
  selector:
    app: scheduler
    instance: ubuntu22-04
  type: ClusterIP
