deploy/ci/buildbarn/storage.yaml
# Adapted from buildbarn/bb-deployments d4a6ca38e5f77959b42fccaa34a3320253683bc2.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: migrations-buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - args:
        - /config/storage.jsonnet
        image: ghcr.io/buildbarn/bb-storage:20260906T092937Z-ae61334
        name: storage
        ports:
        - containerPort: 8981
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /storage-cas
          name: cas
        - mountPath: /storage-ac
          name: ac
        - mountPath: /storage-fsac
          name: fsac
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 750m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        readinessProbe:
          tcpSocket:
            port: 8981
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: storage.jsonnet
            path: storage.jsonnet
      automountServiceAccountToken: false
      nodeSelector:
        doks.digitalocean.com/node-pool: control-plane
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - frontend
                  - scheduler
                  - storage
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: cas
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: do-block-storage
  - metadata:
      name: ac
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage
  - metadata:
      name: fsac
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '80'
    prometheus.io/scrape: 'true'
  name: storage
  namespace: migrations-buildbarn
spec:
  clusterIP: None
  ports:
  - port: 8981
    protocol: TCP
    name: grpc
  selector:
    app: storage
