deploy/ci/buildbarn/network-policy.yaml
# Adapted from buildbarn/bb-deployments d4a6ca38e5f77959b42fccaa34a3320253683bc2.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: buildbarn-private
  namespace: migrations-buildbarn
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
